--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: Almalki
 Type: Package
-Title: What the Package Does (Title Case)
+Title: This Package Provides a Gadget to Plot WDI Data 
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Amwaj Almalki
+Maintainer: The package maintainer <amghalma@iu.edu>
+Description: This interface will be coded in a RShiny gadget. 
+   With this app policy makers will be able to make data driven decisions. It is also possible for the user to
+   use their data instead of the data set in my package
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: 
@@ -15,3 +16,11 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
+Imports: 
+    magrittr,
+    dplyr,
+    ggplot2,
+    shiny,
+    miniUI
